--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@formkit/core": "^1.6.9",
     "@formkit/icons": "^1.6.9",
     "@formkit/vue": "^1.6.9",
     "@tailwindcss/vite": "^4.1.10",
